--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1 class="text-center">Meme Generator</h1>
+    <h1 class="text-center">Nippy Meme Generator</h1>
+    <p>Choose a thumbnail, add your message, and generate your meme</p>
     <div class="container">
         <div class="row">
             <div class="col-md-6">
