--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 class="text-center">Nippy Meme Generator</h1>
-    <p>Choose a thumbnail, add your message, and generate your meme</p>
+    <p><center>Choose a thumbnail, add your message, and generate your meme</center></p>
     <div class="container">
         <div class="row">
             <div class="col-md-6">
