--- a/index.html
+++ b/index.html
@@ -81,9 +81,16 @@
                         <canvas id="memeCanvas" width="500" height="500"></canvas>
                     </div>
                     <div class="text-inputs">
-                        <input type="text" id="topText" placeholder="Top text" class="form-control">
-                        <input type="text" id="bottomText" placeholder="Bottom text" class="form-control">
-                    </div>
+                        <div>
+                          <label for="topText">Top Text</label>
+                          <input type="text" id="topText" placeholder="Top Text">
+                        </div>
+                        <div>
+                          <label for="bottomText">Bottom Text</label>
+                          <input type="text" id="bottomText" placeholder="Bottom Text">
+                        </div>
+                      </div>
+                      
                     <button id="generateMeme" class="btn btn-primary">Generate Meme</button>
                 </div>
             </div>
