--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/ipfs-http-client@52.0.2/dist/index.min.js"></script>
+    <!-- Add this line to the <head> section of your index.html file -->
+<script src="https://unpkg.com/ipfs-http-client@54.1.0/dist/index.min.js"></script>
+
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
