--- a/index.html
+++ b/index.html
@@ -78,16 +78,19 @@
                 <div class="text-inputs">
                     <div>
                         <label for="topText">Top Text</label>
-                        <input type="text" id="topText" placeholder="Top Text">
+                        <!-- Update the input elements -->
+                        <input type="text" id="topText" placeholder="Top Text" style="width: 80%;">
+
+
                     </div>
                     <div>
                         <label for="bottomText">Bottom Text</label>
-                        <input type="text" id="bottomText" placeholder="Bottom Text">
+                        <input type="text" id="bottomText" placeholder="Bottom Text" style="width: 80%;">
                     </div>
                 </div>
                 <div class="button-container">
                     <button id="generateMemeBtn" class="btn btn-primary">Generate Meme</button>
-                    <button id="postOnTwitterBtn" class="btn btn-primary">Post on Twitter</button>
+                    
                 </div>
             </div>
         </div>
